[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.4.0.b0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlite_xeus"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "empack>=5.1.1,<6",
    "traitlets",
    "jupyterlite-core>=0.6,<0.7",
    "pyyaml",
    "requests",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.entry-points."jupyterlite.addon.v0"]
jupyterlite-xeus = "jupyterlite_xeus.add_on:XeusAddon"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlite_xeus/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlite_xeus/labextension" = "share/jupyter/labextensions/@jupyterlite/xeus"
"install.json" = "share/jupyter/labextensions/@jupyterlite/xeus/install.json"

[tool.hatch.build.hooks.version]
path = "jupyterlite_xeus/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlite_xeus/labextension/static/style.js",
    "jupyterlite_xeus/labextension/package.json",
]
skip-if-exists = ["jupyterlite_xeus/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlite_xeus/labextension"

[tool.jupyter-releaser.options]
version_cmd = "python ./scripts/bump_version.py"

[tool.jupyter-releaser.hooks]
before-bump-version = ["python -m pip install 'jupyterlab>=4.0.0,<5'", "jlpm"]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<4.3'",
    "YARN_ENABLE_IMMUTABLE_INSTALLS=0 jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
]
ignore = ["E501", "E731"]
